PIP-307 Upgrade Spring-Data-Elasticsearch to 5.1.1 and Elasticsearch to 8.7.1